@@ -97,6 +97,7 @@
 - added: `U.encryptUID(value, key)` for decrypting of number/string values
 - added: `F.config['secret-uid']` as a hidden secret for encrypting/decrypting values
 - added: `F.dir(path)` for changing of root directory
+- added: `NOSQL()/TABLE().memory(count, [size])` for memory consumption, more in docs
 
 - updated: (IMPORTANT) NoSQL binary divides files to independent directories for 1000 files per directory
 - updated: `GROUP()` by adding a new argument `url_prefix`
